# BengaliToEnglishTranslator

./: .project  englishTranslationOutput.txt  main.py  pyproject.toml
translator/: build.gradle  pom.xml
translator/src/main/java/khan/translator/: App.java  TranslatorApplication.java
translator/src/main/java/khan/translator/imgreader/: ImgReader.java
translator/src/test/java/khan/translator/: TranslatorApplicationTests.java
